bugfix for the case when the file is missing on the server